@@ -639,8 +639,12 @@ static CURLMcode multi_runsingle(struct Curl_multi *multi,
              is already freed and gone */
           easy->easy_conn = NULL;           /* no more connection */
         else {
-          /* FIX: what if protocol_connect is TRUE here?! */
-          multistate(easy, CURLM_STATE_WAITCONNECT);
+          /* call again please so that we get the next socket setup */
+          result = CURLM_CALL_MULTI_PERFORM;
+          if(protocol_connect)
+            multistate(easy, CURLM_STATE_DO);
+          else
+            multistate(easy, CURLM_STATE_WAITCONNECT);
         }
       }
 
